# tree-sitter-hledger

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  binding.gyp  go.mod  grammar.js  package-lock.json  package.json  pyproject.toml  tree-sitter.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
bindings/go/: binding_test.go
bindings/node/: binding.cc  index.d.ts  index.js
bindings/python/tree_sitter_hledger/: __init__.py
bindings/rust/: lib.rs
examples/: comprehensive.journal  simple.journal
queries/: folds.scm  highlights.scm
src/: grammar.json  node-types.json  parser.c  scanner.c
test/corpus/: comments.txt  directives.txt  transactions.txt
