[package]
name = "tree-sitter-hledger"
description = "Tree-sitter grammar for hledger journal files"
version = "0.0.1"
authors = ["Patrick Timoney"]
license = "MIT"
readme = "README.md"
keywords = ["incremental", "parsing", "tree-sitter", "hledger"]
categories = ["parser-implementations", "parsing", "text-editors"]
repository = "https://github.com/ptimoney/tree-sitter-hledger"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
  "bindings/rust/*",
  "grammar.js",
  "queries/*",
  "src/*",
  "tree-sitter.json",
  "/LICENSE",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.26.3"
